--- a/.flaskenv.sample
+++ b/.flaskenv.sample
@@ -6,4 +6,4 @@ FLASK_DEBUG=true
 MAIL_SERVER=smtp.googlemail.com
 MAIL_PORT=587
 MAIL_USE_TLS=1
-MAIL_USERNAME=xavier.p.davis18@gmail.com
+MAIL_USERNAME=mail@email.com
